peac_dev/force-app/main/default/objects/ThirdParty__c/ThirdParty__c.object-meta.xml
<CustomObject>
    <description>Track Third Party  Information  Related to Accounts</description>
    <label>Third Party Data</label>
    <nameField>
        <displayFormat>3rd-{yy}{mm}-{0}</displayFormat>
        <label>ThirdParty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Third Party Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>