peac_dev/force-app/main/default/objects/ThirdParty__c/fields/High_Credit__c.field-meta.xml
<CustomField>
    <fullName>High_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>High Credit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>