peac_dev/force-app/main/default/objects/ThirdParty__c/fields/TaxID__c.field-meta.xml
<CustomField>
    <fullName>TaxID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TaxID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>