peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Address1__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Address1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>