peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Address2__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Address2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>