peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Bankruptcy_Status__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Bankruptcy_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bankruptcy Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>