peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_City__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>200</length>
    <type>Text</type>
</CustomField>