peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Commercial_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Commercial_Credit_Score__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commercial Credit Score</label>
    <length>200</length>
    <type>Text</type>
</CustomField>