peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Employees__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Employees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employees</label>
    <length>200</length>
    <type>Text</type>
</CustomField>