peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_First_Reported_Year__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_First_Reported_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Reported Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>