peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_NAICS_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAICS Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>