peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Open_Liens__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Open_Liens__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Liens</label>
    <length>200</length>
    <type>Text</type>
</CustomField>