peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Out_of_Business_Indicator__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Out_of_Business_Indicator__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Out of Business Indicator</label>
    <length>200</length>
    <type>Text</type>
</CustomField>