peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Owner__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>