peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Parent_Duns__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Parent_Duns__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Duns</label>
    <length>200</length>
    <type>Text</type>
</CustomField>