peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Paydex__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Paydex__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paydex</label>
    <length>200</length>
    <type>Text</type>
</CustomField>