peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Phone__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>