peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_SIC_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SIC Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>