peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_State__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>