peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Time_In_Business__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Time_In_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time In Business</label>
    <length>200</length>
    <type>Text</type>
</CustomField>