peac_dev/force-app/main/default/objects/ThirdParty__c/fields/ThirdParty_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>ThirdParty_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>